cis 2.2/github/1-6865747649/ingress-examples/f5-k8s-ingress-error.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    # Specify a supported BIG-IP load balancing mode
    # Balance to round-robin
    # health monitoring
    virtual-server.f5.com/balance: "least-connections-node"
    virtual-server.f5.com/health: |
        [
          {
            "path": "mysite.f5demo.com/",
            "send": "GET /index.html HTTP/1.1\r\nHost: 10.82.67.1\r\nConnection: Close\r\n",
            "recv": "200 OK",
            "interval": 5,
            "timeout": 10
          }
        ]
    virtual-server.f5.com/ip: 10.192.75.108
    virtual-server.f5.com/partition: k8s
  name: f5-hello-world
spec:
 rules:
 # URL
 - host: mysite.f5demo.com
   http:
     # path to Service from URL
     paths:
       - path: /
         backend:
           serviceName: f5-hello-world
           servicePort: 8080
