cis 2.2/github/1-6865747649/ingress-examples/f5-k8s-ingress-monitor.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    # Specify a supported BIG-IP load balancing mode
    # Balance to round-robin
    # health monitoring
    virtual-server.f5.com/http-port: "80"
    ingress.kubernetes.io/allow-http: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
    virtual-server.f5.com/balance: "round-robin"
    virtual-server.f5.com/health: |
        [
          {
            "path": "mysite.f5demo.com/",
            "send": "GET /index.html HTTP/1.1\r\nHost: 10.82.67.1\r\nConnection: Close\r\n",
            "recv": "200 OK",
            "interval": 5,
            "timeout": 10
          }
        ]
    virtual-server.f5.com/ip: 10.192.75.108
  name: f5-hello-world
spec:
  backend:
    serviceName: f5-hello-world
    servicePort: 8080
